--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">KiwiControl</string>
 
     <string name="translationJoystickTitle">TRANSLATION</string>
+    <string name="rotationJoystickTitle">ROTATION</string>
 </resources>
